<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_weight="1"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/no_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/business_name"
                style="@style/BusinessName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginTop="252dp"
                android:text="@string/business_name"
                app:layout_constraintStart_toStartOf="@+id/restaurant_image"
                app:layout_constraintTop_toTopOf="@+id/restaurant_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true" />

                <TextView
                    android:id="@+id/num_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="2dp"
                    android:text="@string/num_reviews" />

                <TextView
                    android:id="@+id/num_reviews_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review_plural" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/business_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business_price" />

                    <TextView
                        android:id="@+id/interpunct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:text="@string/interpunct"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/business_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business_title" />

                </LinearLayout>

                <TextView
                    android:id="@+id/business_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business_address" />

                <TextView
                    android:id="@+id/business_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:linksClickable="true"
                    android:text="@string/business_phone" />

                <TextView
                    android:id="@+id/business_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:text="@string/business_url" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reroll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reroll"
            android:text="@string/reroll" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>